[lworld] SIGSEGV in ~BufferBlob::buffered value type

XMLWordPrintable

      # A fatal error has been detected by the Java Runtime Environment:
      #
      # SIGSEGV (0xb) at pc=0x00007fa72072b3dc, pid=6714, tid=6715
      #
      # JRE version: Java(TM) SE Runtime Environment (14.0) (fastdebug build 14-lworldea+0-2020-02-12-1507423.tobias.hartmann.valhalla1)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 14-lworldea+0-2020-02-12-1507423.tobias.hartmann.valhalla1, mixed mode, tiered, g1 gc, linux-amd64)
      # Problematic frame:
      # v ~BufferBlob::buffered value type

      Stack: [0x00007fa73efc1000,0x00007fa73f0c2000], sp=0x00007fa73f0bf650, free space=1017k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      v ~BufferBlob::buffered value type
      V [libjvm.so+0xdfa743] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x6e3
      V [libjvm.so+0x155e888] invoke(InstanceKlass*, methodHandle const&, Handle, bool, objArrayHandle, BasicType, objArrayHandle, bool, Thread*) [clone .constprop.130]+0xc38
      V [libjvm.so+0x155fab2] Reflection::invoke_method(oop, Handle, objArrayHandle, Thread*)+0x202
      V [libjvm.so+0xf81078] JVM_InvokeMethod+0x328
      j jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Ljava/lang/reflect/Method;Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+0 java.base@14-lworldea
      j jdk.internal.reflect.NativeMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+100 java.base@14-lworldea
      j jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+6 java.base@14-lworldea
      j java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+59 java.base@14-lworldea
      j compiler.valhalla.valuetypes.TestCallingConvention.test36_verifier(Z)V+17
      v ~StubRoutines::call_stub
      V [libjvm.so+0xdfa743] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x6e3
      V [libjvm.so+0x155e888] invoke(InstanceKlass*, methodHandle const&, Handle, bool, objArrayHandle, BasicType, objArrayHandle, bool, Thread*) [clone .constprop.130]+0xc38
      V [libjvm.so+0x155fab2] Reflection::invoke_method(oop, Handle, objArrayHandle, Thread*)+0x202
      V [libjvm.so+0xf81078] JVM_InvokeMethod+0x328
      j jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Ljava/lang/reflect/Method;Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+0 java.base@14-lworldea
      j jdk.internal.reflect.NativeMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+100 java.base@14-lworldea
      j jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+6 java.base@14-lworldea
      j java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+59 java.base@14-lworldea
      j compiler.valhalla.valuetypes.ValueTypeTest.run([Ljava/lang/Class;)V+318
      j compiler.valhalla.valuetypes.ValueTypeTest.run([Ljava/lang/String;[Ljava/lang/Class;)V+43
      j compiler.valhalla.valuetypes.TestCallingConvention.main([Ljava/lang/String;)V+69
      v ~StubRoutines::call_stub
      V [libjvm.so+0xdfa743] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x6e3
      V [libjvm.so+0xede800] jni_invoke_static(JNIEnv_*, JavaValue*, _jobject*, JNICallType, _jmethodID*, JNI_ArgumentPusher*, Thread*) [clone .isra.184] [clone .constprop.278]+0x1e0
      V [libjvm.so+0xf03d39] jni_CallStaticVoidMethod+0x1f9
      C [libjli.so+0x4bbd] JavaMain+0xbcd
      C [libjli.so+0x8079] ThreadJavaMain+0x9


      siginfo: si_signo: 11 (SIGSEGV), si_code: 1 (SEGV_MAPERR), si_addr: 0x0000000000000028

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: