8239242: [lworld] SIGSEGV in ~BufferBlob::buffered value type